2008-11-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #24589: AT90USB64* have wrong signature
	* avrdude.conf.in: Uncomment the correct, and delete the wrong
	signature for AT90USB646/647.  Alas, the datasheet has never been
	corrected for years.

2008-10-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Fix a serious memory corruption that happened when
	using the JTAG ICE mkII (or AVR Dragon) in ISP mode.  The wrong
	set of per-programmer private data had been allocated (stk500v2
	vs. jtagmkII) which was too small to hold the actual data.
	* jtagmkII.h: (Ditto.)
	* stk500v2.c: (Ditto.)

2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtagmkII.c: Implement Xmega JTAG support.
	* jtagmkII_private.h: Add EMULATOR_MODE_JTAG_XMEGA.

2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* main.c: Remember whether the device initialization worked, and
	allow to continue with -F if it failed yet do not attempt to
	perform anything on the device itself.  That way, -tF could be
	specified for programmers like the STK500/STK600 even without a
	device connected, just in order to allow changing parameters on
	the programmer itself.
	* avrdude.1: Document that possible use of the -F option.
	* doc/avrdude.texi: (Ditto.)

2008-07-29  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* stk500v2.c (stk600_xprog_paged_write): Fix a fatal miscalculation
	of the number of bytes to be written which caused a malloc chunk
	corruption.

2008-07-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	First implementation of ATxmega support.  By now, only the
	PDI mode of the STK600 is supported.  Single-byte EEPROM
	(and flash) updates do not work yet.
	* avr.c: "boot" memory is a candidate memory region for paged
	operations, besides "flash" and "eeprom".
	* avrdude.conf.in: add ATxmega128A1 and ATxmega128A1revD
	* avrpart.h: add the AVRPART_HAS_PDI flag (used to distinguish
	ATxmega parts from classic AVRs), the nvm_base part field, and
	the offset field for a memory region.